# Handwritten-Digit-Prediction-Using-ANN

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  data_loader.py  evaluator.py  model_builder.py  trainer.py
