[project]
name = "handwritten-digit-prediction"
version = "0.1.0"
description = "Handwritten Digit Recognition using ANN with MNIST"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.1",
    "tensorflow==2.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]
